<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".NutritionInfoActivity" >
	
    <LinearLayout
        android:id="@+id/product_name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/product_label"
	        android:textSize="20sp" />
        <TextView
            android:id="@+id/product_name_text"
            android:textSize="20sp"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />     
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/calories_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:textSize="20sp" >
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/calories_label"
	        android:textSize="20sp" />
        <TextView
            android:id="@+id/calories_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp" />     
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/sugar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:textSize="20sp" >
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/sugar_label"
	        android:textSize="20sp" />
        <TextView
            android:id="@+id/sugar_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp" />     
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/carbohydrates_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:textSize="20sp" >
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/carbohydrates_label"
	        android:textSize="20sp" />
        <TextView
            android:id="@+id/carbohydrates_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp" />     
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/proteins_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:textSize="20sp" >
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/proteins_label"
	        android:textSize="20sp" />
        <TextView
            android:id="@+id/proteins_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp" />     
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/fat_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:textSize="20sp" >
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/fat_label"
	        android:textSize="20sp" />
        <TextView
            android:id="@+id/fat_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp" />     
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/saturated_fat_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:textSize="20sp" >
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/saturated_fat_label"
	        android:textSize="20sp" />
        <TextView
            android:id="@+id/saturated_fat_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp" />     
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/fiber_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:textSize="20sp" >
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/fiber_label"
	        android:textSize="20sp" />
        <TextView
            android:id="@+id/fiber_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp" />     
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/cholesterol_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:textSize="20sp" >
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/cholesterol_label"
	        android:textSize="20sp" />
        <TextView
            android:id="@+id/cholesterol_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp" />     
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/sodium_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:textSize="20sp" >
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/sodium_label"
	        android:textSize="20sp" />
        <TextView
            android:id="@+id/sodium_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp" />     
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/calcium_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:textSize="20sp" >
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/calcium_label"
	        android:textSize="20sp" />
        <TextView
            android:id="@+id/calcium_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp" />     
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/iron_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:textSize="20sp" >
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/iron_label"
	        android:textSize="20sp" />
        <TextView
            android:id="@+id/iron_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp" />     
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/vitamin_a_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:textSize="20sp" >
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/vitamin_a_label"
	        android:textSize="20sp" />
        <TextView
            android:id="@+id/vitamin_a_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp" />     
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/vitamin_c_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        android:textSize="20sp" >
        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/vitamin_c_label"
	        android:textSize="20sp" />
        <TextView
            android:id="@+id/vitamin_c_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="20sp" />     
    </LinearLayout>

</LinearLayout>
