<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MenuActivity" >
    
    <TextView 
	    android:id="@+id/login_info_text"
	    android:visibility="gone"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginLeft="5dp"/>
    
    <EditText android:id="@+id/username_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:maxLines="1"
        android:inputType="text"
        android:hint="@string/username_hint" />
    
    <EditText android:id="@+id/password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:maxLines="1"
        android:inputType="textPassword"
        android:hint="@string/password_hint" />

    <Button android:id="@+id/login_button"
       	android:layout_width="match_parent"
       	android:layout_height="wrap_content"
       	android:layout_marginBottom="10dp"
       	android:text="@string/login" />
    
    

</LinearLayout>
